--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+SUDO_USERS = "5042525177"
 IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
