--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ OWNER_ID = "1818001569"
 TELEGRAM_API = "4801575"
 TELEGRAM_HASH = "aa97be0cc83bead4cdf5a1fdecf0da37"
 # OPTIONAL CONFIG
-GDRIVE_FOLDER_ID = "10cTu4E2TNfdF30J0tHSIZ5uQB-sw7TVN"
+GDRIVE_FOLDER_ID = "1Tp8-rB2Cb9mchiIq5CA04DpEDEEZVK8E"
 IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
@@ -14,7 +14,7 @@ AUTHORIZED_CHATS = ""
 SUDO_USERS = "5042525177"
 IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://movies.xnxxxx.workers.dev/0:"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
@@ -52,7 +52,7 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
