--- a/config.env
+++ b/config.env
@@ -4,17 +4,17 @@ OWNER_ID = "1818001569"
 TELEGRAM_API = "4801575"
 TELEGRAM_HASH = "aa97be0cc83bead4cdf5a1fdecf0da37"
 # OPTIONAL CONFIG
-GDRIVE_FOLDER_ID = "1Tp8-rB2Cb9mchiIq5CA04DpEDEEZVK8E"
+GDRIVE_FOLDER_ID = "12FHxfPvsQqUvHkYyLj-AH0infLuPTpLN"
 IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
-SUDO_USERS = "5042525177"
+SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = "https://movies.xnxxxx.workers.dev/0:"
+INDEX_URL = "https://ur.pappa.workers.dev/0:"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
