--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "2105144586:AAHe3EIP9l7DjwEti3cIE5oPGqt1OesU8dw"
-OWNER_ID = "1818001569"
+OWNER_ID = "5200886096"
 TELEGRAM_API = "6412609"
 TELEGRAM_HASH = "a633d86a5b854c259d29d605a6a86e88"
 # OPTIONAL CONFIG
@@ -33,7 +33,7 @@ EQUAL_SPLITS = ""
 CUSTOM_FILENAME = "XDA"
 DUMP_CHAT = ""
 # qBittorrent/Aria2c
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://bhadoocloud321.herokuapp.com/"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 # RSS
